--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources
-    xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -12,31 +11,22 @@
     <color name="green">#22D11B</color>
 
 
-
-
-    <style name="EditTextInputStyle" parent="Widget.AppCompat.EditText" >
-        <item name="android:layout_width">120dp</item>
-        <item name="android:layout_height">32dp</item>
-        <item name="android:inputType">numberSigned</item>
-        <item name="android:layout_margin">7dp</item>
-        <item name="android:layout_marginTop">10dp</item>
-        <item name="android:padding">2dp</item>
-        <item name="android:paddingStart">8dp</item>
-        <item name="android:background">@drawable/custom_input</item>
-        <item name="android:textSize">22sp</item>
-        <item name="android:hint">0</item>
-        <item name="android:autofillHints" tools:ignore="Autofill" />
-        <item name="android:textColorHint">#757575</item>
-    </style>
-
-
     <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
-        <item name="android:textSize">23sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginEnd">10dp</item>
-        <item name="android:layout_marginTop">15dp</item>
-
+        <item name="android:layout_height">26dp</item>
+        <item name="android:layout_marginTop">16.2dp</item>
     </style>
+
+    <style name="EditTextInputStyle" parent="Widget.AppCompat.EditText" >
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">42dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textAlignment">center</item>
+        <!--  <item name="android:background">@drawable/custom_input</item>-->
+        <item name="android:inputType">numberSigned</item>
+        <item name="android:hint">Skor</item>
+    </style>
+
 </resources>
