--- a/app/src/main/res/drawable/custom_edittext.xml
+++ b/app/src/main/res/drawable/custom_edittext.xml
@@ -3,16 +3,17 @@
 
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
-            <corners android:radius="8dp"/>
-            <stroke android:color="@color/purple_700" android:width="1dp"/>
+            <solid android:color="@color/black" />
+            <corners android:radius="10dp" />
+            <stroke android:width="1dp" android:color="@color/red" />
         </shape>
     </item>
+
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="#BFFFFFFF"/>
-            <corners android:radius="8dp"/>
-            <stroke android:color="#808080" android:width="1dp"/>
+            <solid android:color="@color/black" />
+            <corners android:radius="10dp" />
+            <stroke android:width="1dp" android:color="@color/white" />
         </shape>
     </item>
 
