--- a/app/src/main/res/layout/finished_game_item.xml
+++ b/app/src/main/res/layout/finished_game_item.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="4dp"
-    app:cardCornerRadius="8dp"
-    android:layout_margin="8dp">
+    android:orientation="vertical"
+    android:background="@drawable/custom_cardview"
+    android:layout_margin="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="240dp"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -18,12 +17,15 @@
             android:layout_height="wrap_content"
             android:text="@string/team1"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/team1Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+
             android:text="@string/team1Name"
             android:textSize="16sp" />
 
@@ -31,6 +33,8 @@
             android:id="@+id/team1TotalScore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+
             android:text="@string/team1TotalScore"
             android:textSize="16sp" />
 
@@ -42,6 +46,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="@string/team2"
             android:textStyle="bold"
             android:textSize="18sp"
@@ -51,6 +56,7 @@
             android:id="@+id/team2Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="@string/team2Name"
             android:textSize="16sp" />
 
@@ -58,18 +64,19 @@
             android:id="@+id/team2TotalScore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="@string/team2TotalScore"
             android:textSize="16sp" />
 
-        <!-- Tarih Bilgisi -->
         <TextView
             android:id="@+id/gameDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="@string/date"
             android:textSize="16sp"
             android:layout_marginTop="16dp" />
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
