--- a/app/src/main/res/layout/fragment_save_game.xml
+++ b/app/src/main/res/layout/fragment_save_game.xml
@@ -1,263 +1,306 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/sequence"
+    <Button
+        android:background="@drawable/custom_button"
+        android:id="@+id/saveGame"
+        android:layout_gravity="center"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/save_game"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginEnd="15dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toStartOf="@+id/team1ScoresLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolBar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/purple_700"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/sequenceLayout"
-            android:layout_marginTop="70dp"
-            android:text="@string/_1"
-            style="@style/TextViewStyle" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/goToSaveFragment"
+                android:src="@drawable/ic_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/tag"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:text="@string/save_game"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_toEndOf="@+id/goToSaveFragment"/>
+        </RelativeLayout>
+    </androidx.appcompat.widget.Toolbar>
+
+    <GridLayout
+        android:layout_marginTop="60dp"
+        android:id="@+id/gridLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:columnCount="3"
+        android:rowCount="14"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolBar">
+
 
         <TextView
             style="@style/TextViewStyle"
-            android:text="@string/_2"
-          />
-
-        <TextView
-            style="@style/TextViewStyle"
-            android:text="@string/_3" />
-
-        <TextView
-            style="@style/TextViewStyle"
-            android:text="@string/_4" />
-
-        <TextView
-            style="@style/TextViewStyle"
-            android:text="@string/_5" />
-
-        <TextView
-            style="@style/TextViewStyle"
-            android:text="@string/_6" />
-
-        <TextView
-            style="@style/TextViewStyle"
-            android:text="@string/_7" />
-
-        <TextView
-            style="@style/TextViewStyle"
-            android:text="@string/_8" />
-
-        <TextView
-            style="@style/TextViewStyle"
-            android:text="@string/_9"/>
-
-        <TextView
-            style="@style/TextViewStyle"
-            android:text="@string/_10" />
-
-        <TextView
-            style="@style/TextViewStyle"
-            android:text="@string/_11" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/team1ScoresLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/team2ScoresLayout"
-        app:layout_constraintTop_toTopOf="parent">
+            android:layout_gravity="bottom"
+            android:text="" />
 
         <EditText
             android:id="@+id/team1Name"
             style="@style/EditTextInputStyle"
-            android:layout_marginTop="8dp"
-            android:hint="@string/team1"
+            android:autofillHints=""
+            android:hint="@string/team_name"
             android:inputType="text"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:autofillHints=""/>
-
-        <View
-            android:id="@+id/team1View"
-            android:layout_width="match_parent"
-            android:layout_height="10dp"/>
-
-        <EditText
-            android:layout_marginTop="8dp"
-            android:id="@+id/team2Score1"
-            style="@style/EditTextInputStyle"
-            android:autofillHints="" />
-
-        <EditText
-            android:id="@+id/team2Score2"
-            style="@style/EditTextInputStyle"
-            android:autofillHints="" />
-
-        <EditText
-            android:id="@+id/team2Score3"
-            style="@style/EditTextInputStyle"
-            android:autofillHints="" />
-
-        <EditText
-            android:id="@+id/team2Score4"
-            style="@style/EditTextInputStyle"
-            android:autofillHints="" />
-
-        <EditText
-            android:id="@+id/team2Score5"
-            style="@style/EditTextInputStyle"
-            android:autofillHints="" />
-
-        <EditText
-            android:id="@+id/team2Score6"
-            style="@style/EditTextInputStyle"
-            android:autofillHints="" />
-
-        <EditText
-            android:id="@+id/team2Score7"
-            style="@style/EditTextInputStyle"
-            android:autofillHints=""/>
-
-        <EditText
-            android:id="@+id/team2Score8"
-            style="@style/EditTextInputStyle"
-            android:autofillHints="" />
-
-        <EditText
-            android:id="@+id/team2Score9"
-            style="@style/EditTextInputStyle"
-            android:autofillHints="" />
-
-        <EditText
-            android:id="@+id/team2Score10"
-            style="@style/EditTextInputStyle"
-            android:autofillHints="" />
-
-        <EditText
-            android:id="@+id/team2Score11"
-            style="@style/EditTextInputStyle"
-            android:autofillHints="" />
-
-        <EditText
-            android:id="@+id/team1TotalScore"
-            style="@style/EditTextInputStyle"
-            android:background="@android:color/transparent"
-            android:text="@string/total"
-            android:autofillHints="" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/team2ScoresLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/team1ScoresLayout"
-        app:layout_constraintTop_toTopOf="parent">
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/team2Name"
             style="@style/EditTextInputStyle"
-            android:layout_marginTop="8dp"
-            android:hint="@string/team2"
+            android:autofillHints=""
+            android:hint="@string/team_name"
             android:inputType="text"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:autofillHints=""/>
+            android:textStyle="bold" />
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:layout_gravity="center"
+            android:text="" />
+
+        <View
+            android:id="@+id/team1View"
+            android:layout_width="120dp"
+            android:layout_height="10dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp" />
 
         <View
             android:id="@+id/team2View"
-            android:layout_width="match_parent"
-            android:layout_height="10dp"/>
+            android:layout_width="120dp"
+            android:layout_height="10dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp" />
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:layout_gravity="center"
+            android:text="@string/_1" />
 
         <EditText
-            android:layout_marginTop="8dp"
             android:id="@+id/team1Score1"
             style="@style/EditTextInputStyle"
             android:autofillHints="" />
+
+
+        <EditText
+            android:id="@+id/team2Score1"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="@string/_2" />
 
         <EditText
             android:id="@+id/team1Score2"
             style="@style/EditTextInputStyle"
             android:autofillHints="" />
 
+
+        <EditText
+            android:id="@+id/team2Score2"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="@string/_3" />
+
         <EditText
             android:id="@+id/team1Score3"
             style="@style/EditTextInputStyle"
-            android:autofillHints=""  />
+            android:autofillHints="" />
+
+
+        <EditText
+            android:id="@+id/team2Score3"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="@string/_4" />
 
         <EditText
             android:id="@+id/team1Score4"
             style="@style/EditTextInputStyle"
             android:autofillHints="" />
 
+
+        <EditText
+            android:id="@+id/team2Score4"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="@string/_5" />
+
         <EditText
             android:id="@+id/team1Score5"
             style="@style/EditTextInputStyle"
             android:autofillHints="" />
+
+
+        <EditText
+            android:id="@+id/team2Score5"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="@string/_6" />
 
         <EditText
             android:id="@+id/team1Score6"
             style="@style/EditTextInputStyle"
             android:autofillHints="" />
 
+
+        <EditText
+            android:id="@+id/team2Score6"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="@string/_7" />
+
         <EditText
             android:id="@+id/team1Score7"
             style="@style/EditTextInputStyle"
             android:autofillHints="" />
+
+
+        <EditText
+            android:id="@+id/team2Score7"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="@string/_8" />
 
         <EditText
             android:id="@+id/team1Score8"
             style="@style/EditTextInputStyle"
             android:autofillHints="" />
 
+
+        <EditText
+            android:id="@+id/team2Score8"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="@string/_9" />
+
         <EditText
             android:id="@+id/team1Score9"
             style="@style/EditTextInputStyle"
             android:autofillHints="" />
+
+
+        <EditText
+            android:id="@+id/team2Score9"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="@string/_10" />
 
         <EditText
             android:id="@+id/team1Score10"
             style="@style/EditTextInputStyle"
             android:autofillHints="" />
 
+
+        <EditText
+            android:id="@+id/team2Score10"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="@string/_11" />
+
         <EditText
             android:id="@+id/team1Score11"
             style="@style/EditTextInputStyle"
             android:autofillHints="" />
 
+
         <EditText
+            android:id="@+id/team2Score11"
+            style="@style/EditTextInputStyle"
+            android:autofillHints="" />
+
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="" />
+
+        <EditText
+            android:background="@color/black"
+            android:id="@+id/team1TotalScore"
+            style="@style/EditTextInputStyle"
+            android:autofillHints=""
+            android:hint="@string/total_0" />
+
+
+        <EditText
+            android:background="@color/black"
             android:id="@+id/team2TotalScore"
             style="@style/EditTextInputStyle"
-            android:background="@android:color/transparent"
             android:autofillHints=""
-            android:text="@string/total" />
+            android:hint="@string/total_0"  />
 
-    </LinearLayout>
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="" />
 
-    <Button
-        android:id="@+id/saveGame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="128dp"
-        android:text="@string/save_game"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/team2ScoresLayout" />
-
-
+        <TextView
+            style="@style/TextViewStyle"
+            android:text="" />
+    </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
