--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,7 +13,10 @@
 
         <action
             android:id="@+id/action_saveGameFragment_to_finishedGameFragment"
-            app:destination="@id/finishedGameFragment" />
+            app:destination="@id/finishedGameFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            />
     </fragment>
     <fragment
         android:id="@+id/finishedGameFragment"
