--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,19 +14,34 @@
     <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">26dp</item>
-        <item name="android:layout_marginTop">16.2dp</item>
+        <item name="android:layout_gravity">center</item>
+
+
     </style>
 
     <style name="EditTextInputStyle" parent="Widget.AppCompat.EditText" >
-        <item name="android:layout_width">80dp</item>
-        <item name="android:layout_height">42dp</item>
+        <item name="android:layout_width">120dp</item>
+        <item name="android:layout_height">36dp</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textAlignment">center</item>
-        <!--  <item name="android:background">@drawable/custom_input</item>-->
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:background">@drawable/custom_edittext</item>
+        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_gravity">center</item>
         <item name="android:inputType">numberSigned</item>
         <item name="android:hint">Skor</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
+    <style name="MyCardViewStyle" parent="Widget.MaterialComponents.CardView">
+        <item name="cardBackgroundColor">@color/black</item>
+        <item name="cardElevation">8dp</item>
+        <item name="cardCornerRadius">4dp</item>
+        <!--<item name="cardStrokeColor">@color/white</item>-->
+        <item name="cardUseCompatPadding">true</item>
+    </style>
 </resources>
