Kayıt ekranında tasarım değişikliği yapıldı, kayıt olmadığında belirtmek için uyarı mesajı koyuldu

--- a/app/src/main/res/layout/fragment_finished_game.xml
+++ b/app/src/main/res/layout/fragment_finished_game.xml
@@ -55,8 +55,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
     </ScrollView>
 
+    <TextView
+        android:id="@+id/recordNotFound"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/record_not_found"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
