--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources >
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -10,38 +10,45 @@
     <color name="red">#AE3C3C</color>
     <color name="green">#22D11B</color>
 
-
-    <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
-        <item name="android:textSize">20sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/white</item>
+    <style name="EditTextStyle" parent="Widget.AppCompat.EditText" >
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">26dp</item>
-        <item name="android:layout_gravity">center</item>
-
-
-    </style>
-
-    <style name="EditTextInputStyle" parent="Widget.AppCompat.EditText" >
-        <item name="android:layout_width">120dp</item>
-        <item name="android:layout_height">36dp</item>
-        <item name="android:maxLines">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:padding">5dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/white</item>
         <item name="android:background">@drawable/custom_edittext</item>
-        <item name="android:layout_marginStart">10dp</item>
-        <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:inputType">numberSigned</item>
         <item name="android:hint">Skor</item>
-        <item name="android:textAlignment">center</item>
+        <item name="android:layout_weight">2</item>
+
+    </style>
+
+    <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_weight">1</item>
+
+    </style>
+
+    <style name="LinearLayoutStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginBottom">8dp</item>
     </style>
 
     <style name="MyCardViewStyle" parent="Widget.MaterialComponents.CardView">
         <item name="cardBackgroundColor">@color/black</item>
         <item name="cardElevation">8dp</item>
         <item name="cardCornerRadius">4dp</item>
-        <!--<item name="cardStrokeColor">@color/white</item>-->
         <item name="cardUseCompatPadding">true</item>
     </style>
+
+
 </resources>
