Kayıtlı oyunları görüntüleme ekranında, kayıt ekranının tasarımında ve kodlarında değişiklik yapıldı

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,5 +50,7 @@
         <item name="cardUseCompatPadding">true</item>
     </style>
 
-
+    <style name="AlertDialogStyle" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="android:windowBackground">@android:color/black</item>
+    </style>
 </resources>
