--- a/app/src/main/res/layout/finished_game_item.xml
+++ b/app/src/main/res/layout/finished_game_item.xml
@@ -1,82 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:layout_margin="10dp"
     android:background="@drawable/custom_cardview"
-    android:layout_margin="10dp">
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:orientation="vertical"
-        android:padding="16dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/team1"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="12dp">
 
         <TextView
             android:id="@+id/team1Name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/team1"
             android:textColor="@color/white"
-
-            android:text="@string/team1Name"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/team1TotalScore"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-
-            android:text="@string/team1TotalScore"
-            android:textSize="16sp" />
-
-        <View
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:background="#989494"
-            android:layout_height="2dp"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="@string/team2"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:layout_marginTop="16dp" />
+            android:textSize="24sp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/team2Name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/team2"
             android:textColor="@color/white"
-            android:text="@string/team2Name"
-            android:textSize="16sp" />
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
+
+        <TextView
+            android:id="@+id/team1TotalScore"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/_0"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="#FFFFFF"/>
 
         <TextView
             android:id="@+id/team2TotalScore"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/_0"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+
+        android:background="#FFFFFF"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/gameInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/game_info"
             android:textColor="@color/white"
-            android:text="@string/team2TotalScore"
-            android:textSize="16sp" />
+            android:textSize="12sp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"/>
+
 
         <TextView
             android:id="@+id/gameDate"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
             android:text="@string/date"
-            android:textSize="16sp"
-            android:layout_marginTop="16dp" />
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            />
 
     </LinearLayout>
+
 
 </LinearLayout>
