--- a/app/src/main/res/layout/fragment_finished_game.xml
+++ b/app/src/main/res/layout/fragment_finished_game.xml
@@ -16,10 +16,13 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/gameHistoryText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -28,6 +31,20 @@
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle= "bold"/>
+
+            <androidx.appcompat.widget.SearchView
+                app:closeIcon="@drawable/ic_close"
+                app:searchIcon="@drawable/ic_search"
+                app:searchHintIcon="@drawable/ic_search"
+                android:id="@+id/searchView"
+                app:tint="@android:color/white"
+                app:theme="@style/SearchViewStyle"
+                app:queryHint="Aramak için bir tarih veya takım adı yazınız"
+                android:layout_width="match_parent"
+                android:layoutDirection="rtl"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true" />
+
 
 
         </RelativeLayout>
